# soma

./: .gitignore  README.md  main.odin  pyproject.toml
css/: syntax.css
odin/: main.odin  ols.json
python/: README.md
python/soma/: assets.py  build_utils.py  main.py  templates.py
soma/: assets.py  cli.py  content.py  main.py  preset.py  seed.py  templates.py
utils/: http.odin  templates.odin
