[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soma"
version = "0.1.0"
description = "Basic static site generator"
authors = [{ name = "Oskar", email = "oskar.floeck@icloud.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "halo>=0.0.31",
    "jinja2>=3.1.6",
    "markdown>=3.9",
    "pygments>=2.19.2",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
]

[project.scripts]
soma = "soma.cli:cli"

[tool.hatch.build.targets.sdist]
include = ["soma/fonts/*.otf"]
